--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul id="main">
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/pad_thai.html">Pad Thai</a></li>
     </ul>
