--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Lasagna</title>
 </head>
 <body>
@@ -10,7 +11,7 @@
     <img src="https://www.allrecipes.com/thmb/iOfxQGOJTdM0K6edW-MFkn-nydE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg" alt="lasagna">
     <h3>Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:</h3>
     <h3>Lasagna Ingredients</h3>
-    <ul>
+    <ul class="lagasna">
         <li>Meat: This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
         <li>Onion and garlic: An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
         <li>Tomato products: You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
